<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="titel_splash">Spelend Bewegen</string>
    <string name="app_name">Spelend Bewegen</string>
    <string name="start_button_text">Start</string>
    <string name="titel_thema_selectie">Kies een Thema</string>
	<string name="thema_naam_thuis">Thuis</string>
	<string name="thema_naam_buiten">Buiten</string>
	<string name="thema_naam_ophetwerk">Op het werk</string>
    <string name="title_text_size">25dp</string>
    <string name="kies_kaart_text">Kies een kaart</string>
    <string name="default_text_kaart">TextView</string>
    <string name="text_terug">Terug</string>
</resources>