<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/radialbackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titel_thema_selectie"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:id="@+id/thuisButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/thema_naam_thuis"
            android:src="@drawable/thuis"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/werkButton"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:id="@+id/buitenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/thema_naam_buiten"
            android:src="@drawable/buiten"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/werkButton" />

        <ImageButton
            android:id="@+id/werkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/thema_naam_ophetwerk"
            android:src="@drawable/werk"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:cropToPadding="false"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_button_height"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_terug"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true" />
        </RelativeLayout>
